--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="css/styles.css" />
+        <link rel="manifest" href="/manifest.json" />
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <title>Weather</title>
     </head>
